# embAppStartup

./: CMakeLists.txt  README.md  appmain.c  uart.c  uart.h
asm/: reset.S  vectors.S
